<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QmitkImageMaskingWidgetControls</class>
 <widget class="QWidget" name="QmitkImageMaskingWidgetControls">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>238</width>
    <height>329</height>
   </rect>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QmitkSingleNodeSelectionWidget" name="imageNodeSelector" native="true"/>
   </item>
   <item>
    <widget class="QmitkSingleNodeSelectionWidget" name="segNodeSelector" native="true"/>
   </item>
   <item>
    <widget class="QmitkMultiLabelInspector" name="labelInspector" native="true"/>
   </item>
   <item>
    <widget class="QGroupBox" name="grpBackgroundValue">
     <property name="title">
      <string>Background value</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QRadioButton" name="rbnZero">
        <property name="text">
         <string>Zero</string>
        </property>
        <property name="checked">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QRadioButton" name="rbnMinimum">
        <property name="text">
         <string>Minimum</string>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
         <widget class="QRadioButton" name="rbnCustom">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="text">
           <string>Custom:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="txtCustom">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="text">
           <string>0</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QPushButton" name="btnMaskImage">
     <property name="text">
      <string>Mask</string>
     </property>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QmitkSingleNodeSelectionWidget</class>
   <extends>QWidget</extends>
   <header location="global">QmitkSingleNodeSelectionWidget.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>QmitkMultiLabelInspector</class>
   <extends>QWidget</extends>
   <header location="global">QmitkMultiLabelInspector.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
